--- a/Group-Management-System/backend/requirements.txt
+++ b/Group-Management-System/backend/requirements.txt
@@ -6,3 +6,7 @@ google-auth-oauthlib==1.0.0
 google-auth-httplib2==0.1.0
 google-api-python-client==2.86.0
 python-dotenv==1.0.0
+dj-database-url==1.3.0
+gunicorn==20.1.0
+whitenoise==6.4.0
+psycopg==3.1.8
